cabal-version: 3.4
name: xmonad-launch
version: 0.1.0.0
synopsis: It is my xmonad and xmobar setting
homepage: https://github.com/ncaq/.xmonad#readme
bug-reports: https://github.com/ncaq/.xmonad/issues
author: ncaq
maintainer: ncaq@ncaq.net
copyright: © ncaq
license: MIT
license-file: LICENSE
build-type: Simple

source-repository head
  type: git
  location: https://github.com/ncaq/.xmonad

common warnings
  default-language: GHC2024
  default-extensions: OverloadedStrings
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -j

common executable-common
  import: warnings
  ghc-options:
    -threaded
    -rtsopts

  build-depends:
    base,
    containers,
    convertible,
    directory,
    gi-glib,
    gi-gtk3,
    hostname,
    process,
    text,
    time,
    xmobar,
    xmonad,
    xmonad-contrib,
    xmonad-launch,

library
  import: warnings
  exposed-modules:
    ByDpi
    HostChassis
    XMonad.AppMain
    XMonad.Config
    XMonad.Key
    XMonad.ManageHook
    XMonad.Pp
    XMonad.Screenshot
    XMonad.Startup
    XMonad.TouchPad
    Xmobar.AppMain
    Xmobar.Config

  hs-source-dirs: src
  build-depends:
    base,
    containers,
    convertible,
    directory,
    gi-glib,
    gi-gtk3,
    hostname,
    process,
    text,
    time,
    xmobar,
    xmonad,
    xmonad-contrib,

executable xmonad-launch
  import: executable-common
  main-is: Main.hs
  hs-source-dirs: app/XMonad
  ghc-options: -with-rtsopts=-N

executable xmobar-launch
  import: executable-common
  main-is: Main.hs
  hs-source-dirs: app/Xmobar
  ghc-options: -with-rtsopts=-N2
