cabal-version: 3.12
name: xmonad-launch
version: 0.1.0.0
synopsis: It is my xmonad and xmobar setting
homepage: https://github.com/ncaq/.xmonad#readme
bug-reports: https://github.com/ncaq/.xmonad/issues
author: ncaq
maintainer: ncaq@ncaq.net
copyright: ncaq
license: MIT
license-file: LICENSE
build-type: Simple

source-repository head
  type: git
  location: https://github.com/ncaq/.xmonad

common basic
  default-language: GHC2024
  default-extensions:
    OverloadedStrings
    StrictData
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -j

common basic-executable
  import: basic
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N4

  build-depends:
    base,
    containers,
    convertible,
    directory,
    gi-glib,
    gi-gtk3,
    hostname,
    process,
    text,
    time,
    xmobar,
    xmonad,
    xmonad-contrib,
    xmonad-launch,

library
  import: basic
  exposed-modules:
    ByDpi
    HostChassis
    XMonad.AppMain
    XMonad.Config
    XMonad.Key
    XMonad.ManageHook
    XMonad.Pp
    XMonad.Screenshot
    XMonad.Startup
    XMonad.TouchPad
    Xmobar.AppMain
    Xmobar.Config

  hs-source-dirs: src
  build-depends:
    base,
    containers,
    convertible,
    directory,
    gi-glib,
    gi-gtk3,
    hostname,
    process,
    text,
    time,
    xmobar,
    xmonad,
    xmonad-contrib,

executable xmonad-launch
  import: basic-executable
  main-is: Main.hs
  hs-source-dirs: app/XMonad

executable xmobar-launch
  import: basic-executable
  main-is: Main.hs
  hs-source-dirs: app/Xmobar
