cabal-version: 3.12
name: xmonad-launch
version: 0.1.0.0
synopsis: It is my xmonad and xmobar setting
homepage: https://github.com/ncaq/.xmonad#readme
bug-reports: https://github.com/ncaq/.xmonad/issues
license: MIT
license-file: LICENSE
author: ncaq
maintainer: ncaq@ncaq.net
copyright: ncaq
build-type: Simple

source-repository head
  type: git
  location: https://github.com/ncaq/.xmonad

common basic
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints

  default-language: GHC2024
  default-extensions:
    OverloadedStrings
    StrictData

  build-depends:
    base,
    containers,
    convertible,
    directory,
    gi-glib,
    gi-gtk3,
    hostname,
    process,
    text,
    time,
    xmobar,
    xmonad,
    xmonad-contrib,

library
  import: basic
  hs-source-dirs: src
  -- cabal-gild: discover ./src
  exposed-modules:
    ByDpi
    HostChassis
    XMonad.AppMain
    XMonad.Config
    XMonad.Key
    XMonad.ManageHook
    XMonad.Pp
    XMonad.Screenshot
    XMonad.Startup
    XMonad.TouchPad
    Xmobar.AppMain
    Xmobar.Config

common basic-executable
  import: basic
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N4

  build-depends:
    xmonad-launch

executable xmonad-launch
  import: basic-executable
  hs-source-dirs: app/XMonad
  main-is: Main.hs

executable xmobar-launch
  import: basic-executable
  hs-source-dirs: app/Xmobar
  main-is: Main.hs
